--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,32 +22,33 @@
     background-color: #D9D9D9;
 }
 
-input[type=text], select, input[type=date] {
+input[type=text], select, input[type=date], input[type=time] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
     box-sizing: border-box;
 }
 
-input[type=submit] {
+input[type=submit], form > a, .driver > a {
     width: 100%;
     background-color: #148018;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
     max-width: 140px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, form > a, .driver > a {
     background-color: #45a049;
 }
 
@@ -56,10 +57,47 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
     margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
 }
 
 h2 {
     text-align: center;
     text-transform: uppercase;
     font-weight: normal;
+    margin: 10px;
+}
+
+.driver {
+    border-radius: 5px;
+    background: #B9C0B4;
+    padding: 20px 10px;
+    margin: 10px;
+}
+
+.driver > p {
+    color: #000;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    padding-left: 30px;
+}
+
+img {
+    display: block;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    width: 90%;
+    height: auto;
+}
+
+@media only screen and (max-width: 450px) {
+    .driver > p {
+        font-size: 16px;
+        padding-left: 10px;
+    }
 }
